模型读取完成

--- a/resources/shader/shader.qrc
+++ b/resources/shader/shader.qrc
@@ -1,6 +1,6 @@
 <RCC>
     <qresource prefix="/">
-        <file>test.frag</file>
-        <file>test.vert</file>
+        <file>model.vert</file>
+        <file>model.frag</file>
     </qresource>
 </RCC>
