--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -167,20 +167,7 @@
    <widget class="QWidget" name="consoleContents">
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
-      <widget class="QTextBrowser" name="console">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="maximumSize">
-        <size>
-         <width>16777215</width>
-         <height>16777215</height>
-        </size>
-       </property>
-      </widget>
+      <widget class="Console" name="console"/>
      </item>
     </layout>
    </widget>
@@ -257,6 +244,11 @@
    <class>OpenGLWidget</class>
    <extends>QOpenGLWidget</extends>
    <header>OpenGLWidget.h</header>
+  </customwidget>
+  <customwidget>
+   <class>Console</class>
+   <extends>QTextBrowser</extends>
+   <header>Console.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
