brdf实现，图片保存实现

--- a/resources/icons/icons.qrc
+++ b/resources/icons/icons.qrc
@@ -4,5 +4,7 @@
         <file>info.ico</file>
         <file>warning.ico</file>
         <file>title.ico</file>
+        <file>play.ico</file>
+        <file>pause.ico</file>
     </qresource>
 </RCC>
