--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -210,32 +210,6 @@
     </layout>
    </widget>
   </widget>
-  <widget class="QDockWidget" name="dockWidgetDetails">
-   <property name="minimumSize">
-    <size>
-     <width>200</width>
-     <height>170</height>
-    </size>
-   </property>
-   <property name="maximumSize">
-    <size>
-     <width>500</width>
-     <height>524287</height>
-    </size>
-   </property>
-   <property name="allowedAreas">
-    <set>Qt::LeftDockWidgetArea|Qt::RightDockWidgetArea</set>
-   </property>
-   <property name="windowTitle">
-    <string>检查器</string>
-   </property>
-   <attribute name="dockWidgetArea">
-    <number>2</number>
-   </attribute>
-   <widget class="QWidget" name="dockWidgetContents_10">
-    <layout class="QVBoxLayout" name="verticalLayout_5"/>
-   </widget>
-  </widget>
   <widget class="QDockWidget" name="dockWidgetConsole">
    <property name="sizePolicy">
     <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
@@ -268,6 +242,36 @@
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
       <widget class="Console" name="console"/>
+     </item>
+    </layout>
+   </widget>
+  </widget>
+  <widget class="QDockWidget" name="dockWidgetDetails">
+   <property name="minimumSize">
+    <size>
+     <width>200</width>
+     <height>170</height>
+    </size>
+   </property>
+   <property name="maximumSize">
+    <size>
+     <width>500</width>
+     <height>524287</height>
+    </size>
+   </property>
+   <property name="allowedAreas">
+    <set>Qt::LeftDockWidgetArea|Qt::RightDockWidgetArea</set>
+   </property>
+   <property name="windowTitle">
+    <string>检查器</string>
+   </property>
+   <attribute name="dockWidgetArea">
+    <number>2</number>
+   </attribute>
+   <widget class="QWidget" name="dockWidgetContents_10">
+    <layout class="QVBoxLayout" name="verticalLayout_5">
+     <item>
+      <widget class="Inspector" name="inspector" native="true"/>
      </item>
     </layout>
    </widget>
@@ -359,6 +363,12 @@
    <class>EditorOpenGLWidget</class>
    <extends>QOpenGLWidget</extends>
    <header>src/Ui/EditorOpenGLWidget.h</header>
+  </customwidget>
+  <customwidget>
+   <class>Inspector</class>
+   <extends>QWidget</extends>
+   <header>src/Ui/Inspector.h</header>
+   <container>1</container>
   </customwidget>
  </customwidgets>
  <resources/>
