--- a/ui/Inspector.ui
+++ b/ui/Inspector.ui
@@ -13,7 +13,7 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout_2" stretch="0">
+  <layout class="QVBoxLayout" name="verticalLayout_2" stretch="0,0">
    <property name="spacing">
     <number>3</number>
    </property>
@@ -30,6 +30,13 @@
     <number>3</number>
    </property>
    <item>
+    <widget class="QLabel" name="modelName">
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+   </item>
+   <item>
     <widget class="QScrollArea" name="scrollArea">
      <property name="widgetResizable">
       <bool>true</bool>
@@ -40,7 +47,7 @@
         <x>0</x>
         <y>0</y>
         <width>402</width>
-        <height>367</height>
+        <height>348</height>
        </rect>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_3">
