--- a/ui/TransformInspector.ui
+++ b/ui/TransformInspector.ui
@@ -6,48 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>558</width>
-    <height>346</height>
+    <width>735</width>
+    <height>593</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="9" column="0">
-    <widget class="QLabel" name="label_9">
-     <property name="toolTip">
-      <string>编辑物体缩放</string>
-     </property>
-     <property name="text">
-      <string>缩放</string>
-     </property>
-    </widget>
-   </item>
-   <item row="3" column="0">
-    <widget class="QLabel" name="label_4">
-     <property name="toolTip">
-      <string>物体的z坐标</string>
-     </property>
-     <property name="text">
-      <string>z:</string>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="3">
-    <widget class="QDoubleSpinBox" name="doubleSpinBoxPosX">
-     <property name="minimum">
-      <double>-1000000000.000000000000000</double>
-     </property>
-     <property name="maximum">
-      <double>1000000000.000000000000000</double>
-     </property>
-     <property name="stepType">
-      <enum>QAbstractSpinBox::AdaptiveDecimalStepType</enum>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="0">
+   <item row="6" column="0">
     <widget class="QLabel" name="label_3">
      <property name="toolTip">
       <string>物体的y坐标</string>
@@ -57,33 +24,17 @@
      </property>
     </widget>
    </item>
-   <item row="7" column="3">
-    <widget class="QDoubleSpinBox" name="doubleSpinBoxRotationY">
-     <property name="suffix">
-      <string>°</string>
-     </property>
-     <property name="maximum">
-      <double>1000000000.000000000000000</double>
-     </property>
-     <property name="stepType">
-      <enum>QAbstractSpinBox::AdaptiveDecimalStepType</enum>
-     </property>
-     <property name="value">
-      <double>0.000000000000000</double>
-     </property>
-    </widget>
-   </item>
-   <item row="5" column="0">
-    <widget class="QLabel" name="label_6">
+   <item row="12" column="0">
+    <widget class="QLabel" name="label_8">
      <property name="toolTip">
-      <string>物体绕x轴旋转角度</string>
+      <string>物体绕z轴旋转角度</string>
      </property>
      <property name="text">
-      <string>α:</string>
+      <string>γ:</string>
      </property>
     </widget>
    </item>
-   <item row="2" column="3">
+   <item row="6" column="3">
     <widget class="QDoubleSpinBox" name="doubleSpinBoxPosY">
      <property name="minimum">
       <double>-1000000000.000000000000000</double>
@@ -96,7 +47,17 @@
      </property>
     </widget>
    </item>
-   <item row="7" column="0">
+   <item row="15" column="0">
+    <widget class="QLabel" name="label_11">
+     <property name="toolTip">
+      <string>物体y轴缩放大小</string>
+     </property>
+     <property name="text">
+      <string>Sy:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="11" column="0">
     <widget class="QLabel" name="label_7">
      <property name="toolTip">
       <string>物体绕y轴旋转角度</string>
@@ -106,7 +67,33 @@
      </property>
     </widget>
    </item>
-   <item row="4" column="3">
+   <item row="4" column="0">
+    <widget class="QLabel" name="label">
+     <property name="toolTip">
+      <string>编辑物体三维坐标</string>
+     </property>
+     <property name="whatsThis">
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     </property>
+     <property name="text">
+      <string>位置</string>
+     </property>
+    </widget>
+   </item>
+   <item row="13" column="3">
+    <spacer name="horizontalSpacer_3">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>40</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="8" column="3">
     <spacer name="horizontalSpacer_2">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -119,41 +106,8 @@
      </property>
     </spacer>
    </item>
-   <item row="3" column="3">
-    <widget class="QDoubleSpinBox" name="doubleSpinBoxPosZ">
-     <property name="minimum">
-      <double>-1000000000.000000000000000</double>
-     </property>
-     <property name="maximum">
-      <double>1000000000.000000000000000</double>
-     </property>
-     <property name="stepType">
-      <enum>QAbstractSpinBox::AdaptiveDecimalStepType</enum>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="0">
-    <widget class="QLabel" name="label_2">
-     <property name="toolTip">
-      <string>物体的x坐标</string>
-     </property>
-     <property name="text">
-      <string>x:</string>
-     </property>
-    </widget>
-   </item>
-   <item row="10" column="0">
-    <widget class="QLabel" name="label_10">
-     <property name="toolTip">
-      <string>物体x轴缩放大小</string>
-     </property>
-     <property name="text">
-      <string>Sx:</string>
-     </property>
-    </widget>
-   </item>
    <item row="0" column="3">
-    <spacer name="horizontalSpacer">
+    <spacer name="horizontalSpacer_4">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
@@ -165,37 +119,7 @@
      </property>
     </spacer>
    </item>
-   <item row="11" column="0">
-    <widget class="QLabel" name="label_11">
-     <property name="toolTip">
-      <string>物体y轴缩放大小</string>
-     </property>
-     <property name="text">
-      <string>Sy:</string>
-     </property>
-    </widget>
-   </item>
-   <item row="4" column="0">
-    <widget class="QLabel" name="label_5">
-     <property name="toolTip">
-      <string>编辑物体的旋转角度</string>
-     </property>
-     <property name="text">
-      <string>旋转</string>
-     </property>
-    </widget>
-   </item>
-   <item row="12" column="0">
-    <widget class="QLabel" name="label_12">
-     <property name="toolTip">
-      <string>物体z轴缩放大小</string>
-     </property>
-     <property name="text">
-      <string>Sz:</string>
-     </property>
-    </widget>
-   </item>
-   <item row="8" column="3">
+   <item row="12" column="3">
     <widget class="QDoubleSpinBox" name="doubleSpinBoxRotationZ">
      <property name="suffix">
       <string>°</string>
@@ -214,17 +138,108 @@
      </property>
     </widget>
    </item>
-   <item row="8" column="0">
-    <widget class="QLabel" name="label_8">
+   <item row="14" column="0">
+    <widget class="QLabel" name="label_10">
      <property name="toolTip">
-      <string>物体绕z轴旋转角度</string>
+      <string>物体x轴缩放大小</string>
      </property>
      <property name="text">
-      <string>γ:</string>
+      <string>Sx:</string>
      </property>
     </widget>
    </item>
-   <item row="5" column="3">
+   <item row="11" column="3">
+    <widget class="QDoubleSpinBox" name="doubleSpinBoxRotationY">
+     <property name="suffix">
+      <string>°</string>
+     </property>
+     <property name="maximum">
+      <double>1000000000.000000000000000</double>
+     </property>
+     <property name="stepType">
+      <enum>QAbstractSpinBox::AdaptiveDecimalStepType</enum>
+     </property>
+     <property name="value">
+      <double>0.000000000000000</double>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="3">
+    <spacer name="horizontalSpacer_5">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>40</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="16" column="3">
+    <widget class="QDoubleSpinBox" name="doubleSpinBoxScaleZ">
+     <property name="minimum">
+      <double>0.000000000000000</double>
+     </property>
+     <property name="maximum">
+      <double>1000000000.000000000000000</double>
+     </property>
+     <property name="stepType">
+      <enum>QAbstractSpinBox::AdaptiveDecimalStepType</enum>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="0">
+    <widget class="QLabel" name="label_14">
+     <property name="toolTip">
+      <string>编辑器显示的参考坐标系</string>
+     </property>
+     <property name="text">
+      <string>编辑器参考坐标系</string>
+     </property>
+    </widget>
+   </item>
+   <item row="15" column="3">
+    <widget class="QDoubleSpinBox" name="doubleSpinBoxScaleY">
+     <property name="minimum">
+      <double>0.000000000000000</double>
+     </property>
+     <property name="maximum">
+      <double>1000000000.000000000000000</double>
+     </property>
+     <property name="stepType">
+      <enum>QAbstractSpinBox::AdaptiveDecimalStepType</enum>
+     </property>
+     <property name="value">
+      <double>0.000000000000000</double>
+     </property>
+    </widget>
+   </item>
+   <item row="8" column="0">
+    <widget class="QLabel" name="label_5">
+     <property name="toolTip">
+      <string>编辑物体的旋转角度</string>
+     </property>
+     <property name="text">
+      <string>旋转</string>
+     </property>
+    </widget>
+   </item>
+   <item row="7" column="3">
+    <widget class="QDoubleSpinBox" name="doubleSpinBoxPosZ">
+     <property name="minimum">
+      <double>-1000000000.000000000000000</double>
+     </property>
+     <property name="maximum">
+      <double>1000000000.000000000000000</double>
+     </property>
+     <property name="stepType">
+      <enum>QAbstractSpinBox::AdaptiveDecimalStepType</enum>
+     </property>
+    </widget>
+   </item>
+   <item row="9" column="3">
     <widget class="QDoubleSpinBox" name="doubleSpinBoxRotationX">
      <property name="suffix">
       <string>°</string>
@@ -241,32 +256,59 @@
     </widget>
    </item>
    <item row="0" column="0">
-    <widget class="QLabel" name="label">
+    <widget class="QLabel" name="label_13">
      <property name="toolTip">
-      <string>编辑物体三维坐标</string>
-     </property>
-     <property name="whatsThis">
-      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      <string>修改gizmo类型</string>
      </property>
      <property name="text">
-      <string>位置</string>
+      <string>编辑器类型</string>
      </property>
     </widget>
    </item>
-   <item row="9" column="3">
-    <spacer name="horizontalSpacer_3">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
+   <item row="5" column="3">
+    <widget class="QDoubleSpinBox" name="doubleSpinBoxPosX">
+     <property name="minimum">
+      <double>-1000000000.000000000000000</double>
      </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>40</width>
-       <height>20</height>
-      </size>
+     <property name="maximum">
+      <double>1000000000.000000000000000</double>
      </property>
-    </spacer>
+     <property name="stepType">
+      <enum>QAbstractSpinBox::AdaptiveDecimalStepType</enum>
+     </property>
+    </widget>
    </item>
-   <item row="10" column="3">
+   <item row="5" column="0">
+    <widget class="QLabel" name="label_2">
+     <property name="toolTip">
+      <string>物体的x坐标</string>
+     </property>
+     <property name="text">
+      <string>x:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="9" column="0">
+    <widget class="QLabel" name="label_6">
+     <property name="toolTip">
+      <string>物体绕x轴旋转角度</string>
+     </property>
+     <property name="text">
+      <string>α:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="16" column="0">
+    <widget class="QLabel" name="label_12">
+     <property name="toolTip">
+      <string>物体z轴缩放大小</string>
+     </property>
+     <property name="text">
+      <string>Sz:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="14" column="3">
     <widget class="QDoubleSpinBox" name="doubleSpinBoxScaleX">
      <property name="minimum">
       <double>0.000000000000000</double>
@@ -282,37 +324,107 @@
      </property>
     </widget>
    </item>
-   <item row="11" column="3">
-    <widget class="QDoubleSpinBox" name="doubleSpinBoxScaleY">
-     <property name="minimum">
-      <double>0.000000000000000</double>
+   <item row="4" column="3">
+    <spacer name="horizontalSpacer">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
      </property>
-     <property name="maximum">
-      <double>1000000000.000000000000000</double>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>40</width>
+       <height>20</height>
+      </size>
      </property>
-     <property name="stepType">
-      <enum>QAbstractSpinBox::AdaptiveDecimalStepType</enum>
+    </spacer>
+   </item>
+   <item row="1" column="0" colspan="4">
+    <widget class="QWidget" name="widget" native="true">
+     <layout class="QHBoxLayout" name="horizontalLayout">
+      <item>
+       <widget class="QRadioButton" name="radioButtonPos">
+        <property name="text">
+         <string>位置</string>
+        </property>
+        <attribute name="buttonGroup">
+         <string notr="true">buttonGroup</string>
+        </attribute>
+       </widget>
+      </item>
+      <item>
+       <widget class="QRadioButton" name="radioButtonRotation">
+        <property name="text">
+         <string>旋转</string>
+        </property>
+        <attribute name="buttonGroup">
+         <string notr="true">buttonGroup</string>
+        </attribute>
+       </widget>
+      </item>
+      <item>
+       <widget class="QRadioButton" name="radioButtonScale">
+        <property name="text">
+         <string>缩放</string>
+        </property>
+        <attribute name="buttonGroup">
+         <string notr="true">buttonGroup</string>
+        </attribute>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item row="13" column="0">
+    <widget class="QLabel" name="label_9">
+     <property name="toolTip">
+      <string>编辑物体缩放</string>
      </property>
-     <property name="value">
-      <double>0.000000000000000</double>
+     <property name="text">
+      <string>缩放</string>
      </property>
     </widget>
    </item>
-   <item row="12" column="3">
-    <widget class="QDoubleSpinBox" name="doubleSpinBoxScaleZ">
-     <property name="minimum">
-      <double>0.000000000000000</double>
+   <item row="7" column="0">
+    <widget class="QLabel" name="label_4">
+     <property name="toolTip">
+      <string>物体的z坐标</string>
      </property>
-     <property name="maximum">
-      <double>1000000000.000000000000000</double>
+     <property name="text">
+      <string>z:</string>
      </property>
-     <property name="stepType">
-      <enum>QAbstractSpinBox::AdaptiveDecimalStepType</enum>
-     </property>
+    </widget>
+   </item>
+   <item row="3" column="0" colspan="4">
+    <widget class="QWidget" name="widget_2" native="true">
+     <layout class="QHBoxLayout" name="horizontalLayout_2">
+      <item>
+       <widget class="QRadioButton" name="radioButtonWorld">
+        <property name="text">
+         <string>世界</string>
+        </property>
+        <attribute name="buttonGroup">
+         <string notr="true">buttonGroup2</string>
+        </attribute>
+       </widget>
+      </item>
+      <item>
+       <widget class="QRadioButton" name="radioButtonLocal">
+        <property name="text">
+         <string>自身</string>
+        </property>
+        <attribute name="buttonGroup">
+         <string notr="true">buttonGroup2</string>
+        </attribute>
+       </widget>
+      </item>
+     </layout>
     </widget>
    </item>
   </layout>
  </widget>
  <resources/>
  <connections/>
+ <buttongroups>
+  <buttongroup name="buttonGroup"/>
+  <buttongroup name="buttonGroup2"/>
+ </buttongroups>
 </ui>
