--- a/ui/RenderOptionInspector.ui
+++ b/ui/RenderOptionInspector.ui
@@ -228,6 +228,13 @@
      </property>
     </widget>
    </item>
+   <item row="8" column="0">
+    <widget class="QPushButton" name="pushButtonReset">
+     <property name="text">
+      <string>重置</string>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
  <resources/>
