光追渲染器 v1.0

--- a/resources/icons/icons.qrc
+++ b/resources/icons/icons.qrc
@@ -9,5 +9,8 @@
         <file>downArrow.png</file>
         <file>leftArrow.png</file>
         <file>background.png</file>
+        <file>new.ico</file>
+        <file>open.ico</file>
+        <file>save.ico</file>
     </qresource>
 </RCC>
